yaml/13/01.cluster-ip.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random-generator
  namespace: svc-test
  labels:
    app: random-generator
spec:
  containers:
  - name: app
    image: busybox
    command: ["sh", "-c", "while true; do echo $(date) >> /data/log.txt; sleep 5; done"]
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: random-generator
  namespace: svc-test
spec:
  selector:
    app: random-generator
  ports:
  - port: 80
    targetPort: 8080
