yaml/13/02.after-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-c
  namespace: test
spec:
  ports:
  - port: 8082
    targetPort: 8082
