yaml/13/02.service-before.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: test
spec:
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: test
spec:
  ports:
  - port: 8081
    targetPort: 8081
