yaml/13/03.session-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: svc-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: ealen/echo-server
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: svc-test
spec:
  selector:
    app: echo
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 80
