yaml/13/04.service-without-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-db
  namespace: test
spec:
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-db
  namespace: test
subsets:
- addresses:
  - ip: 1.2.3.4   # 예: 외부 PostgreSQL IP
  ports:
  - port: 5432
