yaml/13/05.node-port-with-external-traffic-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-node
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-node
  template:
    metadata:
      labels:
        app: echo-node
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
          - "-text=Hello from $(NODE_NAME)"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-node
  namespace: test
spec:
  type: NodePort
  selector:
    app: echo-node
  ports:
  - port: 80
    targetPort: 5678
    nodePort: 30080
  externalTrafficPolicy: Local
