yaml/13/06.headless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-headless
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-headless
  template:
    metadata:
      labels:
        app: web-headless
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-headless
  namespace: test
spec:
  clusterIP: None
  selector:
    app: web-headless
  ports:
  - port: 80
    targetPort: 80
